--- a/aplicativos/VISUALG.INI
+++ b/aplicativos/VISUALG.INI
@@ -1,5 +1,6 @@
 [Files]
-MRUFile1=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\CURSOS\algoritmos\electron configuration of atoms\electron configuration.alg
-MRUFile2=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\novos cursos\algoritmo\aplicativos\Semnome.alg
-MRUFile3=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\novos cursos\algoritmos\exercícios\codigos\ex002.alg
-MRUFile4=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\novos cursos\algoritmos\exercícios\Semnome.alg
+MRUFile1=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\4-PROGRAMAÇÃO\cursos\algoritmo\electron configuration of atoms\distribuição eletrônica de átomos.alg
+MRUFile2=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\CURSOS\algoritmos\electron configuration of atoms\electron configuration.alg
+MRUFile3=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\novos cursos\algoritmo\aplicativos\Semnome.alg
+MRUFile4=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\novos cursos\algoritmos\exercícios\codigos\ex002.alg
+MRUFile5=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\novos cursos\algoritmos\exercícios\Semnome.alg
