--- a/aplicativos/VISUALG.INI
+++ b/aplicativos/VISUALG.INI
@@ -1,6 +1,28 @@
 [Files]
 MRUFile1=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\4-PROGRAMAÇÃO\cursos\algoritmo\electron configuration of atoms\distribuição eletrônica de átomos.alg
-MRUFile2=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\CURSOS\algoritmos\electron configuration of atoms\electron configuration.alg
-MRUFile3=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\novos cursos\algoritmo\aplicativos\Semnome.alg
-MRUFile4=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\novos cursos\algoritmos\exercícios\codigos\ex002.alg
-MRUFile5=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\novos cursos\algoritmos\exercícios\Semnome.alg
+MRUFile2=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\4-PROGRAMAÇÃO\cursos\algoritmo\exercices\works\aula1\ola mundo!.alg
+MRUFile3=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\CURSOS\algoritmos\electron configuration of atoms\electron configuration.alg
+MRUFile4=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\novos cursos\algoritmo\aplicativos\Semnome.alg
+MRUFile5=C:\Users\andra\OneDrive\Área de Trabalho\HENRIQUE\novos cursos\algoritmos\exercícios\codigos\ex002.alg
+[Editor]
+CommentAttri=2
+CommentColor=32768
+IdentifierAttri=0
+IdentifierColor=0
+StringAttri=0
+StringColor=255
+TiposDedadosAttri=4
+TiposDeDadosColor=128
+ConstantesAttri=0
+ConstantesColor=255
+EspecialAttri=4
+EspecialColor=16711680
+NumberAttri=0
+NumberColor=255
+TabWidth=3
+Color=-2147483643
+KeyAttri=0
+KeyColor=8388608
+FontName=Courier New
+FontSize=10
+SmartTabs=1
